<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">SiZakat Lazisba</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="app_str_hometitle">Selamat Datang</string>
    <string name="app_str_kas">Kas</string>
    <string name="app_str_dummyval">Rp. 55.616.425</string>
    <string name="app_str_cari">Cari</string>
    <string name="title_activity_detil_anak_bus">Informasi Anak BUS</string>
    <string name="app_str_detilBUS">Informasi Detail Anak BUS</string>
    <string name="app_label_nama">Nama:</string>
    <string name="app_str_dummyname">Ahmad Toyyib</string>
    <string name="app_lbl_ttl">Tempat, tanggal lahir:</string>
    <string name="app_lbl_prestasi">Prestasi:</string>
    <string name="app_str_dummyttl">Semarang, 1 Januari 1997</string>
    <string name="app_version">v.0.6 MockUp</string>
    <string name="title_activity_lazisba_home">LazisbaHome</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_company_name">Peta Lokasi Lazisba</string>
    <string name="app_str_companyaddr">Jl. Pandanaran 126, Simpang Lima, Semarang</string>
    <string name="app_str_viewmap">Lihat Peta</string>
    <string name="title_activity_kalkulator_zakat">Kalkulator Zakat</string>
    <string name="app_str_perh_nisab">Perhitungan Nisab</string>
    <string name="app_str_numbnul_rp">Rp. 0</string>
    <string name="app_str_null">-</string>
    <string name="app_str_updategold">Update Harga Emas</string>
    <string name="app_str_kalkzakat">Kalkulator Zakat</string>
    <string name="app_str_menusizakat">Menu Sistem Informasi Zakat</string>
    <string name="app_str_listbus">Daftar Peserta BUS</string>
    <string name="app_str_noconnection">Tidak ada koneksi</string>
    <string name="app_str_tryagain">Coba Lagi</string>
    <string name="title_activity_list_peserta_bus">Daftar Peserta BUS</string>
    <string name="app_str_newbus">Tambah BUS baru</string>

    <string-array name="app_str_months">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>

    <string name="app_splash_developer">Informatika Universitas Diponegoro</string>
    <string name="title_activity_splash_screen">Lazis Baiturrahman</string>
    <string name="app_str_loading">Memuat&#8230;</string>
    <string name="app_str_show">Tampilkan</string>
    <string name="app_laporankeuangan_filter">Tampilkan Laporan Bulan lain...</string>
    <string name="app_sizakat_donasiku">Donasiku</string>
    <string name="app_sizakat_opensiz">Buka SiZakat versi Web</string>
    <string name="app_profil_rekening">Nomor Rekening</string>
    <string name="app_str_cancel">Batalkan</string>
    <string name="title_activity_donasiku">Laporan Donasiku</string>
    <string name="app_donasiku_title">Laporan Donasiku</string>
    <string name="app_str_zero">0</string>
    <string name="title_activity_kalkulator_zakat_harta">Zakat Harta Tersimpan</string>
    <string name="title_activity_kalkulator_zakat_profesi">Zakat Profesi</string>
    <string name="title_activity_kalkulator_zakat_usaha">Zakat Usaha</string>
    <string name="app_str_100percent">100%</string>
    <string name="app_str_calculate">Hitung</string>
    <string name="app_str_moredetail">Lebih Detail...</string>
    <string name="app_str_nodonation">Anda belum melakukan transaksi apapun</string>
    <string name="app_str_myprofile">Profilku</string>
    

</resources>