<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    >

    <TextView
        android:id="@+id/fragment_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_str_menusizakat"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <Button
        android:id="@+id/sizakat_kalkzakat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_dimen_padding"
        android:text="@string/app_str_kalkzakat" />

    <Button
        android:id="@+id/sizakat_daftarbus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_dimen_padding"
        android:text="@string/app_str_listbus" />

</LinearLayout>