<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/item_trx_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:padding="10dp"
        android:src="@drawable/icon_check_32" />

    <TextView
        android:id="@+id/item_trx_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/item_trx_icon"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="Zakat"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/item_trx_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_trx_title"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/item_trx_title"
        android:paddingLeft="5dp"
        android:text="@string/app_str_dummyval"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/item_trx_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_trx_desc"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/item_trx_desc"
        android:paddingBottom="3dp"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:text="@string/app_str_dummyttl"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#999"
        android:textSize="12sp" />

</RelativeLayout>
